Overflow hidden to prevent auto-scroll

--- a/style.css
+++ b/style.css
@@ -74,8 +74,12 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
-  background-color: #101214;
-  color: #7a7c80;
+  background-color: #c8cacc;
+  color: #000000;
+}
+
+.main-body-wrapper {
+  overflow-x: hidden;
 }
 
 h2,
